faster version of text2graph for TextGCN

--- a/data/load_raw_data.ipynb
+++ b/data/load_raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "# folders names\n",
     "categories = [\"business\", \"tech\", \"politics\", \"sport\", \"entertainment\"]\n",
     "# paths to folders\n",
-    "folder_path = [data_path + \"/data/bbc/\" + categories[i] for i in range(len(categories))]\n",
+    "folder_path = [\"./\" + categories[i] for i in range(len(categories))]\n",
     "# names of files in every folder\n",
     "file_path = []\n",
     "for i in range(len(folder_path)):\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "385  Jungle TV show ratings drop by 4m\\n\\nThe final...  entertainment"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-cb83fb7799b0>:1: FutureWarning: the 'fname'' keyword is deprecated, use 'path' instead\n",
+      "<ipython-input-5-cb83fb7799b0>:1: FutureWarning: the 'fname'' keyword is deprecated, use 'path' instead\n",
       "  data_all.reset_index().to_feather(fname=\"raw_text_DF.feather\")\n"
      ]
     }
