--- a/TextGCN/text2graph.ipynb
+++ b/TextGCN/text2graph.ipynb
@@ -53,31 +53,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "business         0\n",
-       "entertainment    1\n",
-       "politics         0\n",
-       "sport            0\n",
-       "tech             0\n",
-       "Name: 2093, dtype: uint8"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y.iloc[2093,:]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def word_word_matrix(tokenized_texts, words_order):\n",
     "    unigram_freq = pd.value_counts(list(itertools.chain.from_iterable(tokenized_texts)))\n",
-    "    # unigram_freq = unigram_freq[:10]\n",
+    "    \n",
     "    unigram_prob = unigram_freq /float(sum(unigram_freq))\n",
     "    unigram_prob_matrix = np.matmul(np.expand_dims(unigram_prob, 1), np.expand_dims(unigram_prob, 1).T)\n",
     "\n",
@@ -105,7 +80,7 @@
     "    for a,b in zip(bigram_freq.index, bigram_freq):\n",
     "        bigram_freq_set[a] = int(b)\n",
     "\n",
-    "\n",
+    "    \n",
     "    bigram_matrix = np.zeros((len(words_order),len(words_order)))\n",
     "\n",
     "    for i in range(len(words_order)):\n",
@@ -128,51 +103,53 @@
     "\n",
     "    adj_matrix = np.log(bigram__prob_matrix / unigram_prob_matrix)\n",
     "    adj_matrix[adj_matrix < 0] = 0\n",
-    "    adj_matrix\n",
     "    return(adj_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def freq_words(tokenized_texts):\n",
     "    unique_freq_tokens = pd.value_counts(list(itertools.chain.from_iterable(tokenized_texts)))\n",
-    "    unique_freq_tokens = unique_freq_tokens[unique_freq_tokens>10][10:]\n",
+    "    unique_freq_tokens = unique_freq_tokens[unique_freq_tokens>100][10:]\n",
     "    unique_freq_tokens = list(unique_freq_tokens.index)\n",
     "    unique_freq_tokens = [t for t in unique_freq_tokens if t.isalnum()]\n",
     "    return(unique_freq_tokens)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create word-word submatrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-3-cb78af80453b>:37: RuntimeWarning: divide by zero encountered in log\n",
+      "<ipython-input-7-9e1d4cde1c5e>:37: RuntimeWarning: divide by zero encountered in log\n",
       "  adj_matrix = np.log(bigram__prob_matrix / unigram_prob_matrix)\n"
      ]
     }
    ],
    "source": [
+    "# find tokens that occured more than 100 times in all documents\n",
     "useful_tokens = freq_words(X_tokenized)\n",
+    "# select only 'useful_tokens' from every document\n",
     "X_tokenized_filtered = []\n",
     "for text in X_tokenized: X_tokenized_filtered.append([t for t in text if t in useful_tokens])\n",
-    "word_word_adj = word_word_matrix(X_tokenized_filtered, useful_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# create word-word submatrix of adjacency matrix\n",
+    "word_word_adj = word_word_matrix(X_tokenized_filtered, useful_tokens)\n",
+    "# clean the diagonal\n",
     "for i in range(word_word_adj.shape[0]):\n",
     "    word_word_adj[i,i] = 0 "
    ]
@@ -186,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# word_word_adj word_doc_adj \n",
-    "# doc_word_adj doc_doc_adj\n",
+    "#              word_word_adj | word_doc_adj \n",
+    "#  Adj_mat =   -----------------------------\n",
+    "#              doc_word_adj  | doc_doc_adj\n",
+    "\n",
     "col1 = np.row_stack((word_word_adj, doc_word_adj.todense()))\n",
     "col2 = np.row_stack((word_doc_adj.todense(), doc_doc_adj))\n",
     "graph_adj = np.column_stack((col1,col2))\n",
@@ -236,32 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Graph = nx.from_pandas_adjacency(graph_adj_df)"
+    "Graph = nx.from_pandas_adjacency(graph_adj_df)\n",
+    "# save for visualization:\n",
+    "#nx.write_graphml(Graph, \"./Textgraph.graphml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nx.write_graphml(Graph, \"./Textgraph.graphml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "from datetime import datetime as dt\n",
     "now = dt.now() \n",
-    "file = open(\"./\"+ now.strftime(\"%H%M_%d%m%Y\") + \"_\" + str(\"global_adj_graph\") + \".pkl\",'wb')\n",
+    "file = open(\"./../data/TextGCN_Graph/\"+ now.strftime(\"%H%M_%d%m%Y\") + \"_\" + str(\"adj_mat\") + \".pkl\",'wb')\n",
     "\n",
     "pickle.dump(Graph, file)\n",
     "#pickle.dump(featureMat_DF, file)\n",
