uploading pretrain 100 dimensional word2vec; fixed data paths in NB&DNN models

--- a/NB&DNN/tfidfNB.ipynb
+++ b/NB&DNN/tfidfNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -20,29 +20,36 @@
     "from nltk import word_tokenize \n",
     "import itertools\n",
     "\n",
-    "data = pd.read_feather(\"dataFrame.feather\")\n",
+    "#load the data\n",
+    "data = pd.read_feather(\"./../data/raw_text_DF.feather\")\n",
     "data[\"category\"] = pd.Categorical(data[\"category\"])\n",
     "print(data.shape)\n",
     "X = data[\"text\"]\n",
     "Y = pd.get_dummies(data[\"category\"])\n",
-    "train_X, test_X, train_Y, test_Y = train_test_split(X, Y, test_size = 0.1)\n"
+    "train_X, test_X, train_Y, test_Y = train_test_split(X, Y, test_size = 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_unique = [word_tokenize(text.lower()) for text in train_X]\n",
     "X_unique = pd.value_counts(list(itertools.chain.from_iterable(X_unique)))\n",
-    "X_unique = X_unique[X_unique>9]\n",
     "X_unique = list(X_unique.index)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tf-idf feature representation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,68 +64,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2002, 6566)\n",
-      "(223, 6566)\n"
+      "(2002, 33283)\n",
+      "(223, 33283)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8139427842511371"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(X_train_tfidf.shape)\n",
-    "print(X_test_tfidf.shape)\n",
-    "np.max(X_train_tfidf.todense())"
+    "print(X_test_tfidf.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.1649770736694336 seconds ---\n"
+      "--- 0.25519394874572754 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
     "import time\n",
     "start_time = time.time()\n",
-    "clf = GaussianNB()\n",
+    "clf = MultinomialNB()\n",
     "clf.fit(X_train_tfidf.todense(), Y_train)\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train set accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.98001998001998"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,17 +138,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test set accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9013452914798207"
+       "0.9641255605381166"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,13 +163,6 @@
    "source": [
     "np.sum(clf.predict(X_test_tfidf.todense())==Y_test)/len(Y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
